Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-166

Code completion cannot recognise namespace aliases

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 2.7.1
    • Qt Creator 1.2.1, Qt Creator 1.3.0
    • C/C++/Obj-C++ Support
    • None
    • eb30ab6604063550fea2d44a573299b95d459c3c

      Steps to reproduce / test case:

      I discovered it when using the boost library. I used the namespace alias:

      namespace po = boost::program_options;

      Code using this namespace alias compiles fine but the code autocompletion mechanism does not work.
      This means 'po::' will not trigger an autocomplete and neither will typing an object method '.' on any object creating using the namespace alias.

        For Gerrit Dashboard: QTCREATORBUG-166
        # Subject Branch Project Status CR V

            erikv Erik Verbruggen
            sthomass Stian Sandvik Thomassen (closed Nokia identity) (Inactive)
            Votes:
            30 Vote for this issue
            Watchers:
            18 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes