src/libs/cplusplus/LookupContext.cpp
@@ -518,6 +518,14 @@ void CreateBindings::lookupInScope(const Name *name, Scope *scope,
             item.setDeclaration(s);
             item.setBinding(binding);
 
+            if (s->asNamespaceAlias() && binding) {
+                ClassOrNamespace *targetNamespaceBinding = binding->lookupType(name);
+                if (targetNamespaceBinding && targetNamespaceBinding->symbols().size() == 1) {
+                    Symbol *resolvedSymbol = targetNamespaceBinding->symbols().first();
+                    item.setType(resolvedSymbol->type()); // override the type
+                }
+            }
+
             if (templateId && (s->isDeclaration() || s->isFunction())) {
                 FullySpecifiedType ty = DeprecatedGenTemplateInstance::instantiate(templateId, s, _control);
                 item.setType(ty); // override the type.
